# mo_ecat_pc

./: .gitignore  .gitmodules  20260629工作内容.md  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.cpp
app/app_controller/: app_controller.cpp  app_controller.h
app/core_bridge/: ecat_qt_bridge.cpp  ecat_qt_bridge.h  ecat_types.h  ecat_worker.cpp  ecat_worker.h
app/gui/: main_window.cpp  main_window.h
docs/: 工程框架说明.md
docs/接口边界/: UI与core_bridge边界.md  mo_ecat_core公共接口.md
